--- a/sitemap.html
+++ b/sitemap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-29 Fri 21:40 -->
+<!-- 2019-11-30 Sat 19:26 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Sitemap - Seorenn Static Pages</title>
@@ -70,11 +70,12 @@ gtag('config', 'UA-44534026-1');
 <li><a href="apple-dev-links.html">macOS, iOS 등 애플 플랫폼 개발 관련 링크 모음</a></li>
 <li><a href="org-publish-sapzil.html">org-publish 삽질기</a></li>
 <li><a href="etc-dev-links.html">기타 개발 관련 링크 모음</a></li>
+<li><a href="etc-resource-links.html">기타 리소스 링크 모음</a></li>
 <li><a href="service_links.html">눈에 띄는 서비스 링크 모음</a></li>
 <li><a href="server-stack-links.html">서버 스택 관련 링크 모음</a></li>
 <li><a href="web-dev-links.html">웹 개발 관련 링크 모음</a></li>
 <li><a href="emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></li>
 </ul>
-<div id="footer"><div id="time">2019년 11월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 30일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
