--- a/spacemacs.html
+++ b/spacemacs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-25 Mon 00:43 -->
+<!-- 2019-11-29 Fri 22:28 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Spacemacs - Seorenn Static Pages</title>
@@ -57,12 +57,13 @@ gtag('config', 'UA-44534026-1');
 <h2 id="org4331a93">관련 외부 링크</h2>
 <div class="outline-text-2" id="text-org4331a93">
 <ul class="org-ul">
-<li><a target="_blank" href="https://www.youtube.com/playlist?list=PLPNohcoOBa5GejCpa5-Mw79bXnyynM1Nn">The (Subjective) Spacemacs Howto</a>:
+<li><a target="_blank" href="https://www.youtube.com/playlist?list=PLPNohcoOBa5GejCpa5-Mw79bXnyynM1Nn">🌏
+The (Subjective) Spacemacs Howto</a>:
 제가 운영하던 유튜브 채널의 스페이스맥스 플레이리스트입니다.
 현재 둠으로 잠시 이주한 탓에 업데이트를 보류하고 있습니다.</li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 25일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
