--- a/combine-framework.html
+++ b/combine-framework.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-01 Sun 01:35 -->
+<!-- 2019-12-01 Sun 01:43 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Combine Framework - Seorenn Static Pages</title>
@@ -11,11 +11,11 @@
 <meta property="og:title" content="Combine Framework" />
 <meta property="og:description" content="Combine Framework(컴바인 프레임워크)에 대한 간략한 가이드" />
 <meta property="og:type" content="website" />
-<meta property="og:image" content="https://k.kakaocdn.net/dn/cnRXKA/btqz6G8Whsb/wIGiF8HsFyxVn5UNmxse10/img.png" />
+<meta property="og:image" content="https://seorenn.github.io/img/seorenn-logo.png" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Combine Framework" />
 <meta name="twitter:description" content="Combine Framework(컴바인 프레임워크)에 대한 간략한 가이드" />
-<meta name="twitter:image" content="https://k.kakaocdn.net/dn/cnRXKA/btqz6G8Whsb/wIGiF8HsFyxVn5UNmxse10/img.png" />
+<meta name="twitter:image" content="https://seorenn.github.io/img/seorenn-logo.png" />
 <meta name="twitter:site" content="@seorenn" />
 <meta name="twitter:creator" content="@seorenn" />
 <link rel="stylesheet" type="text/css" href="/static/style.css"/>
