--- a/doom-emacs-vs-spacemacs.html
+++ b/doom-emacs-vs-spacemacs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-01 Sun 01:35 -->
+<!-- 2019-12-01 Sun 01:43 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs VS Spacemacs - Seorenn Static Pages</title>
@@ -11,11 +11,11 @@
 <meta property="og:title" content="Doom Emacs VS Spacemacs" />
 <meta property="og:description" content="Doom Emacs(둠 이맥스)와 Spacemacs(스페이스맥스)를 주관적으로 비교해보는 글입니다." />
 <meta property="og:type" content="website" />
-<meta property="og:image" content="https://k.kakaocdn.net/dn/cnRXKA/btqz6G8Whsb/wIGiF8HsFyxVn5UNmxse10/img.png" />
+<meta property="og:image" content="https://seorenn.github.io/img/seorenn-logo.png" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Doom Emacs VS Spacemacs" />
 <meta name="twitter:description" content="Doom Emacs(둠 이맥스)와 Spacemacs(스페이스맥스)를 주관적으로 비교해보는 글입니다." />
-<meta name="twitter:image" content="https://k.kakaocdn.net/dn/cnRXKA/btqz6G8Whsb/wIGiF8HsFyxVn5UNmxse10/img.png" />
+<meta name="twitter:image" content="https://seorenn.github.io/img/seorenn-logo.png" />
 <meta name="twitter:site" content="@seorenn" />
 <meta name="twitter:creator" content="@seorenn" />
 <link rel="stylesheet" type="text/css" href="/static/style.css"/>
