--- a/etc-dev-links.html
+++ b/etc-dev-links.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-01 Sun 01:43 -->
+<!-- 2019-12-02 Mon 14:49 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>기타 개발 관련 링크 모음 - Seorenn Static Pages</title>
@@ -40,7 +40,9 @@ gtag('config', 'UA-44534026-1');
 <li><a target="_blank" href="https://libvips.github.io/libvips/">libvips</a>: 가벼운 이미지 프로세싱 라이브러리</li>
 <li><a target="_blank" href="https://parksb.github.io/article/35.html">🦀 러스트의 멋짐을 모르는 당신은
 불쌍해요</a>: Rust의 전반적인 소개글</li>
+<li><a target="_blank" href="https://www.coscreen.co">CoScreen</a>: 스크린 하나를 통채로 협업을 위한 공간으로
+만들어주는 도구로 현재는 macOS만 지원되는 것 같습니다.</li>
 </ul>
-<div id="footer"><div id="time">2019년 12월 01일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 02일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
