--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-01 Sun 01:49 -->
+<!-- 2019-12-03 Tue 01:25 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Frontpage - Seorenn Static Pages</title>
@@ -85,6 +85,8 @@ gtag('config', 'UA-44534026-1');
 <li><a href="swift.html">Swift</a></li>
 <li><a href="python.html">Python</a></li>
 <li><a href="lisp.html">Lisp</a></li>
+<li><a href="javascript.html">Javascript</a></li>
+<li><a href="css.html">Cascase Style Sheet</a></li>
 </ul>
 </div>
 </div>
@@ -96,6 +98,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="git.html">Git</a></li>
 <li><a href="docker.html">Docker</a></li>
 <li><a href="kubectl.html">kubectl</a></li>
+<li><a href="homebrew.html">Homebrew</a></li>
 </ul>
 </div>
 </div>
@@ -118,6 +121,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></li>
 <li><a href="service_links.html">눈에 띄는 서비스 링크 모음</a></li>
 <li><a href="etc-resource-links.html">기타 리소스 링크 모음</a></li>
+<li><a href="non-dev-links.html">비개발 관련 정보 링크 모음</a></li>
 </ul>
 </div>
 </div>
@@ -132,6 +136,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 01일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 03일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
