--- a/sitemap.html
+++ b/sitemap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-02 Mon 14:50 -->
+<!-- 2019-12-03 Tue 12:32 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Sitemap - Seorenn Static Pages</title>
@@ -37,6 +37,7 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">Sitemap</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header><ul class="org-ul">
+<li><a href="css.html">Cascase Style Sheet</a></li>
 <li><a href="combine-framework.html">Combine Framework</a></li>
 <li><a href="docker.html">Docker</a></li>
 <li><a href="docker-compose.html">Docker Compose</a></li>
@@ -57,6 +58,8 @@ gtag('config', 'UA-44534026-1');
 <li><a href="install-emacs.html">Emacs 설치</a></li>
 <li><a href="index.html">Frontpage</a></li>
 <li><a href="git.html">Git</a></li>
+<li><a href="homebrew.html">Homebrew</a></li>
+<li><a href="javascript.html">Javascript</a></li>
 <li><a href="lisp.html">Lisp</a></li>
 <li><a href="magit.html">Magit</a></li>
 <li><a href="mongodb.html">MongoDB</a></li>
@@ -82,10 +85,11 @@ gtag('config', 'UA-44534026-1');
 <li><a href="etc-dev-links.html">기타 개발 관련 링크 모음</a></li>
 <li><a href="etc-resource-links.html">기타 리소스 링크 모음</a></li>
 <li><a href="service_links.html">눈에 띄는 서비스 링크 모음</a></li>
+<li><a href="non-dev-links.html">비개발 관련 정보 링크 모음</a></li>
 <li><a href="server-stack-links.html">서버 스택 관련 링크 모음</a></li>
 <li><a href="web-dev-links.html">웹 개발 관련 링크 모음</a></li>
 <li><a href="emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></li>
 </ul>
-<div id="footer"><div id="time">2019년 12월 02일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 03일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
