--- a/web-dev-links.html
+++ b/web-dev-links.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-02 Mon 14:49 -->
+<!-- 2019-12-02 Mon 16:36 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>웹 개발 관련 링크 모음 - Seorenn Static Pages</title>
@@ -111,6 +111,8 @@ gtag('config', 'UA-44534026-1');
 with a focus on portability and compact footprint</a>: C로 구현된 임베디드 자바스크립트
 엔진? 의존성도 좋고 C 혹은 호환되는 언어들과 궁합이 좋은 듯. ES5, ES5.1,
 ES6(일부), ES7(일부) 지원.</li>
+<li><a target="_blank" href="https://github.com/jakubroztocil/httpie">HTTPie</a>: curl을 대체할 수 있는
+현대적인 HTTP Request/Response 유틸리티</li>
 </ul>
 </div>
 </div>
