--- a/vim.html
+++ b/vim.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-01 Sun 12:41 -->
+<!-- 2019-12-03 Tue 17:41 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Vim - Seorenn Static Pages</title>
@@ -131,6 +131,15 @@ vi 혹은 Vim의 종료 방법은 보통 아래처럼 설명합니다.
 </p>
 </div>
 </div>
+<div id="outline-container-orgf2c1841" class="outline-3">
+<h3 id="orgf2c1841">점프(Jump)</h3>
+<div class="outline-text-3" id="text-orgf2c1841">
+<ul class="org-ul">
+<li><code>f [character]</code> 현재 라인에서 해당 문자로 점프</li>
+<li><code>F [character]</code> 현재 라인에서 해당 문자로 역방향 점프</li>
+</ul>
+</div>
+</div>
 </div>
 <div id="outline-container-org27ccd03" class="outline-2">
 <h2 id="org27ccd03">관련글</h2>
@@ -141,6 +150,6 @@ vi 혹은 Vim의 종료 방법은 보통 아래처럼 설명합니다.
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 01일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 03일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
