--- a/emacs-lisp-functions.html
+++ b/emacs-lisp-functions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-01 Sun 12:41 -->
+<!-- 2019-12-04 Wed 00:47 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Emacs Lisp Functions - Seorenn Static Pages</title>
@@ -185,11 +185,29 @@ gtag('config', 'UA-44534026-1');
 <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">-&gt; "name.ext"</span>
 </pre>
 </div>
+</div>
+</div>
+<div id="outline-container-orgfd22e28" class="outline-3">
+<h3 id="orgfd22e28">파일 목록</h3>
+<div class="outline-text-3" id="text-orgfd22e28">
+</div>
+<div id="outline-container-org92c9527" class="outline-4">
+<h4 id="org92c9527">org-expand-wildcards</h4>
+<div class="outline-text-4" id="text-org92c9527">
+<p>
+아래 커맨드는 <code>~/foo/bar</code> 디렉토리 안의 모든 <code>.org</code> 파일 목록을 돌려줍니다.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp">(file-expand-wildcards <span style="color: #98be65;">"~/foo/bar/*.org"</span>)
+</pre>
+</div>
 
 <hr>
 </div>
 </div>
 </div>
+</div>
+
 <div id="outline-container-orgf8b5428" class="outline-2">
 <h2 id="orgf8b5428">관련글</h2>
 <div class="outline-text-2" id="text-orgf8b5428">
@@ -198,6 +216,6 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 01일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 04일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
