--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-03 Tue 01:25 -->
+<!-- 2019-12-03 Tue 22:32 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Frontpage - Seorenn Static Pages</title>
@@ -86,7 +86,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="python.html">Python</a></li>
 <li><a href="lisp.html">Lisp</a></li>
 <li><a href="javascript.html">Javascript</a></li>
-<li><a href="css.html">Cascase Style Sheet</a></li>
+<li><a href="css.html">Cascading Style Sheets</a></li>
 </ul>
 </div>
 </div>
