--- a/doom-emacs-shortcuts.html
+++ b/doom-emacs-shortcuts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-03 Tue 22:47 -->
+<!-- 2019-12-04 Wed 18:30 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 단축키 - Seorenn Static Pages</title>
@@ -134,6 +134,7 @@ gtag('config', 'UA-44534026-1');
 <ul class="org-ul">
 <li><code>SPC s p</code> 프로젝트에서 검색(search in project)</li>
 <li><code>SPC s d</code> 디렉토리에서 검색(search in directory)</li>
+<li><code>SPC '</code> 계속 검색(ivy-resume)</li>
 </ul>
 </div>
 </div>
@@ -154,6 +155,7 @@ gtag('config', 'UA-44534026-1');
 <li><code>,</code> 이전으로 점프</li>
 <li><code>g s j</code> 표시된 문자를 입력한 위치로 아래방향 점프(evil-easymotion)</li>
 <li><code>g s k</code> 표시된 문자를 입력한 위치로 아래방향 점프(evil-easymotion)</li>
+<li><code>g s SPC</code> 키보드로 입력하는 글자 위치로 점프(avy)</li>
 </ul>
 </div>
 </div>
@@ -247,6 +249,6 @@ Vi에서 쓰는 커서 이동키의 방향과 동일합니다.</p></div></div>
 
 
 </div>
-</div><div id="footer"><div id="time">2019년 12월 03일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div><div id="footer"><div id="time">2019년 12월 04일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
